# ceppa

./: .env  .gitignore  Dockerfile.hf  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  courses.py  lessons.py  tavily.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: base.py
backend/app/schemas/: course.py  lesson.py  user.py
backend/app/services/: llm_service.py  pdf_service.py  prompts.py  search_service.py  tavily_service.py
envs/: backend.local.env  local.env
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  InteractiveBackground.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CourseView.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx
