[tool.poetry]
name = "ceppa-backend"
version = "0.1.0"
description = "Backend for Ceppa.ai"
authors = ["piopy"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
openai = "^1.10.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.7"
jinja2 = "^3.1.3" 
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"} 

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
